<resources>
    <string name="app_name">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bot_o_nova_tarefa">Botão Nova Tarefa</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="descricao" />
    <string name="responsavel">Responsável</string>
    <string name="data">Data</string>
    <string name="descri_o">Descrição</string>
    <string name="respons_vel">Responsável</string>
    <string name="salvar">Salvar</string>
    <string name="data_2">Data</string>
    <string name="em_andamento">Em andamento</string>
    <string name="nome">Nome</string>
    <string name="categoria">Categoria</string>
    <string name="deletar_tarefa">Deletar Tarefa</string>
    <string name="em_andamento2">Em andamento</string>
    <string name="salvar_Tarefa" />
    <string name="em_andamento_Tarefa" />
    <string name="data_Tarefa" />
    <string name="responsavel_Tarefa" />
    <string name="descricao_Tarefa" />
    <string name="nomeTarefa" />
    <string name="salvar_tarefa">Salvar Tarefa</string>
    <string name="nome_">Nome</string>
    <string name="respons_vel_">Responsável</string>
    <string name="data_">Data</string>
    <string name="tarefa_em_andamento">Tarefa em andamento</string>
</resources>