<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="33dp"
        android:contentDescription="@string/descricao"
        android:text="@string/descri_o"
        app:layout_constraintStart_toStartOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="380dp"
        android:layout_height="33dp"
        android:text="@string/respons_vel"
        android:contentDescription="@string/responsavel"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:layout_editor_absoluteY="161dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="380dp"
        android:layout_height="33dp"
        android:text="@string/data_2"
        android:contentDescription="@string/data"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:layout_editor_absoluteY="216dp"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:text="@string/em_andamento"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteY="272dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="33dp"
        android:text="@string/nome"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="49dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="380dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/categoria"
        tools:layout_editor_absoluteY="347dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/salvar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="478dp" />

</androidx.constraintlayout.widget.ConstraintLayout>